Add file extenstion to list.

--- a/multiqc/utils/config_defaults.yaml
+++ b/multiqc/utils/config_defaults.yaml
@@ -141,8 +141,9 @@ fn_clean_exts:
     - '.hicup'
     - '.counts'
     - '_counts'
-    - '.human.insertsize.txt'
-    - '.catalog.insertsize.txt'
+    - '.human.bam'
+    - '.igc_alignment.bam'
+    - '.human.'
     - '.txt'
     - '.tsv'
     - '.csv'
