--- a/multiqc/utils/search_patterns.yaml
+++ b/multiqc/utils/search_patterns.yaml
@@ -338,6 +338,8 @@ longranger/invocation:
     max_filesize: 2048
 macs2:
     fn: '*_peaks.xls'
+metagenomic_read_stats:
+    fn: '*.human_removal_stats'
 methylQA:
     fn: '*.report'
     shared: true
