Initial commits to facilitate analysis of read counts in multiqc

--- a/multiqc/utils/config_defaults.yaml
+++ b/multiqc/utils/config_defaults.yaml
@@ -444,6 +444,9 @@ module_order:
     - bowtie1:
         module_tag:
             - RNA
+    - metagenomics_read_stats:
+          - module_tag:
+                - DNA
 
     # Pre-alignment QC
     - kat:
