Add file extension for removal.

--- a/multiqc/utils/config_defaults.yaml
+++ b/multiqc/utils/config_defaults.yaml
@@ -132,6 +132,7 @@ fn_clean_exts:
     - '.png'
     - '.jpg'
     - '.jpeg'
+    - '.human_removal_stats'
     - 'Log.final'
     - 'ReadsPerGene'
     - '.flagstat'
